[tool.poetry]
name = "round-analytics"
version = "0.1.0"
description = ""
authors = ["Leon <limiroshnichenko@miem.hse.ru>"]
readme = "README.md"
packages = [{include = "round_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
python-dotenv = "^0.21.0"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
